example/memory-test-deploy2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory-load-example
  namespace: example2
  #namespace: example
spec:
  selector:
    matchLabels:
      app: stress
  replicas: 1 
  template:
    metadata:
      labels:
        app: stress
    spec:
      containers:
      - name: stress
        image: progrium/stress:latest
        command: ["/bin/sh"]
        args: ["-c", "while true; do sleep 3600; done"]
        resources:
          limits:
            cpu: "300m"
            memory: "256Mi"
          requests:
            cpu: "300m"
            memory: "256Mi"
