example/nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-example3
  namespace: example
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "300m"
          requests:
            cpu: "300m"
