example/nginx-svc2.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-example-svc
  namespace: example2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: NodePort
